Add some tests and improves Readme

--- a/source/less/global.less
+++ b/source/less/global.less
@@ -11,7 +11,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(to right, #00aaff, #00ff6c);
+  background-color: @background;
   color: @main-font-color;
   font-family: @main-font;
 }
