--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -2,6 +2,7 @@
 @black: #000;
 @white: #fff;
 @main-font-color: #4a4a4a;
+@background: #9edff4;
 @output-background-color: rgba(0, 0, 0, 0.75);
 @button-color: rgba(255, 255, 255, 0.75);
 @button-color--hover: rgba(255, 255, 255, 0.9);
